# companion

./: .gitignore  CLAUDE.md  GEMINI.md  firestore.rules
backend/: .dockerignore  alembic.ini  pyproject.toml  seed_staging.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_first_last_name.py  003_caregiver_invitation_flow.py  004_account_deactivation_deletion.py  005_drop_phone_unique_constraint.py  006_rebrand_config_category_enum.py  007_add_deletion_settings_config_category.py  008_add_admin_request_deletion_reason.py  009_device_tokens.py  010_chat_sessions.py  011_document_chunks_pgvector.py  012_add_extraction_prompt_enum.py  013_pending_review.py  014_fix_documentstatus_enum.py  015_pending_review_text_columns.py  016_add_reading_grade_to_documents.py  017_encrypted_columns.py  018_add_page_count_to_documents.py  019_add_related_bill_id_to_todos.py
backend/app/: __init__.py  branding.py  config.py  logging_config.py  main.py
backend/app/auth/: __init__.py  authorize.py  dependencies.py  firebase.py  middleware.py
backend/app/conversation/: __init__.py  llm.py  persona.py  prompt_builder.py  retrieval.py  safety.py  state_manager.py  stt.py  tool_executor.py  tools.py  tts.py
backend/app/db/: __init__.py  encrypted_type.py  redis.py  session.py
backend/app/events/: __init__.py  publisher.py  schemas.py  subscribers.py
backend/app/integrations/: email_service.py  gmail.py
backend/app/models/: __init__.py  admin_user.py  appointment.py  assignment_request.py  audit.py  bill.py  chat_session.py  device_token.py  document.py  document_chunk.py  enums.py  functional_memory.py  medication.py  pending_review.py  pipeline_metrics.py  question_tracker.py  system_config.py  todo.py  trusted_contact.py  user.py
backend/app/notifications/: __init__.py  briefing.py  (+5 more)
backend/tests/: conftest.py  test_health.py  test_integration.py  utils.py
(+259 files in other folders)
