[project]
name = "companion-backend"
version = "0.1.0"
description = "Companion — Independence Assistant for Adults with Developmental Disabilities"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",

    # Redis
    "redis[hiredis]>=5.0.0",

    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Auth
    "firebase-admin>=6.5.0",

    # Google Cloud
    "google-cloud-pubsub>=2.23.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-texttospeech>=2.17.0",
    "google-cloud-speech>=2.27.0",
    "google-cloud-documentai>=2.32.0",

# HTTP client
    "httpx>=0.27.0",

    # LLM clients
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "google-cloud-aiplatform>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint.per-file-ignores]
"app/conversation/persona.py" = ["E501"]  # Prompt templates have natural long lines
"app/integrations/email_service.py" = ["E501"]  # HTML email templates have natural long lines

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["B008", "UP017"]  # B008: Depends() in defaults; UP017: datetime.utcnow() is fine for naive columns

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
